--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -184,12 +184,17 @@
 				});
 
 				document.getElementById('choose').addEventListener('tap', function() {
-					events.fireToPageWithData('storage_main_choose.html', 'init', {
-						fid: subData.fid, //文件id,顶层0
-						showTop: subData.showTop, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
-						title: subData.title, //标题名
-						top: subData.top //顶层文件和文件夹的数据
-					});
+					if(plus.webview.getWebviewById('storage_main_choose.html') == null) {
+						events.fireToPageWithData('storage_main_choose.html', 'init', {
+							fid: subData.fid, //文件id,顶层0
+							showTop: subData.showTop, //是否显示顶部的上传，传输列表，文件夹，如果是选择云盘上的文件夹则为false
+							title: subData.title, //标题名
+							top: subData.top //顶层文件和文件夹的数据
+						});
+					} else {
+						plus.webview.getWebviewById('storage_main_choose.html').show('slide-in-right', 250);
+					}
+
 				});
 			})
 		</script>
