调整云盘文件图标的颜色和显示类型

--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -19,6 +19,7 @@
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
 		<script type="text/javascript" src="../../js/utils/events.js"></script>
+		<script type="text/javascript" src="../../js/cloud/cloud.js"></script>
 		<style>
 			.iconfont {
 				line-height: 42px;
@@ -509,7 +510,7 @@
 							html3 = '<img class="cloud-bottom-imge" src="' + data.fpath + '" />';
 						}
 						html4 = '<div class="mui-media-body">\
-								<font id="fname_' + data.fid + '" class="mui-ellipsis">' + data.fname + data.ftype + '</font><font class="mui-ellipsis">' + data.ftype + '</font>\
+								<font id="fname_' + data.fid + '" class="mui-ellipsis">' + data.fname + '</font><font class="mui-ellipsis">' + data.ftype + '</font>\
 							</div>';
 					}
 				}
