--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -229,7 +229,7 @@
 									unickName0.value = '';
 									password0.value = '';
 									password1.value = '';
-									if(tempFlag == 0) {
+									if(tempFlag == 0||tempFlag == 2) {
 										var tempInfo = window.myStorage.getItem(window.storageKeyName.PERSONALINFO);
 										tempInfo.ispw = '1';
 										window.myStorage.setItem(window.storageKeyName.PERSONALINFO, tempInfo);
