增加Android系统读取文件系统的js,修改选择云存储路径时选择顶部文件夹未删除

--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -180,7 +180,7 @@
 					console.log('subData:' + JSON.stringify(subData));
 					document.getElementById("yunpath").innerHTML = subData.title;
 					pid = subData.fid;
-					//					init(subData);
+					init();
 				});
 
 				window.addEventListener('chooseFolder', function(e) {
@@ -208,6 +208,23 @@
 					//						plus.webview.getWebviewById('storage_main_choose.html').show('slide-in-right', 250);
 					//					}
 				});
+
+				//界面初始化
+				function init() {
+					if(mui.os.ios) {//iOS系统
+						initIOS();
+					} else if(mui.os.android) {//android系统
+						initANDROID();
+					}
+				}
+
+				function initIOS(){
+
+				}
+
+				function initANDROID(){
+
+				}
 			})
 		</script>
 	</body>
