--- a/JiaoBaoYun-hb/html/quan/leave-sub.html
+++ b/JiaoBaoYun-hb/html/quan/leave-sub.html
@@ -144,7 +144,7 @@
 				};
 				//请求数据
 				requestData(comData);
-				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
+//				mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
 			}, 1500);
 
 		}
@@ -153,11 +153,11 @@
 		 * 上拉加载具体业务实现
 		 */
 		function pullupRefresh() {
-			setTimeout(function() {
 				flag = 2;
-				mui('#pullrefresh').pullRefresh().endPullupToRefresh(true); //参数为true代表没有更多数据了。
+				
 				if(tempPage * 10 > totalCnt || tempPage * 10 == totalCnt) {
 					mui.toast('没有更多了...');
+					mui('#pullrefresh').pullRefresh().endPullupToRefresh(); //参数为true代表没有更多数据了。
 				} else {
 					tempPage++;
 					var comData = {
@@ -168,7 +168,6 @@
 					//请求数据
 					requestData(comData);
 				}
-			}, 1500);
 
 		}
 		
@@ -181,6 +180,7 @@
 		var flag = 1;
 		//页码请求到要显示的数据，array[model_userSpaceInfo]
 		var leaveArray = [];
+		var tempArrayLength = 0;
 		//请求数据
 		function requestData(comData) {
 			// 等待的对话框
@@ -254,9 +254,14 @@
 					if(flag == 1) {
 						tempPage = 1;
 						leaveArray = tempRspData;
+						tempArrayLength = leaveArray.length;
+						console.log('1111111111===='+tempArrayLength);
 					} else {
+						tempArrayLength = leaveArray.length;
+						console.log('2222222222===='+tempArrayLength);
 						//合并数组
 						leaveArray = leaveArray.concat(tempRspData);
+						console.log('33333333333===='+leaveArray.length);
 					}
 					//留言总条数
 					totalCnt = data.RspData.TotalCnt;
@@ -309,8 +314,15 @@
 
 		function refreshUI() {
 			var ul = document.getElementById('leaveList');
-			ul.innerHTML = '';
-			for(var i = 0; i < leaveArray.length; i++) {
+			var len;
+			if(flag==1){
+				ul.innerHTML = '';
+				len=0
+			}else{
+				len = tempArrayLength
+			}
+			console.log('len='+len+'，'+'leaveArray.length=='+leaveArray.length);
+			for(var i = len; i < leaveArray.length; i++) {
 				var li = document.createElement('li');
 				li.className = 'mui-table-view-cell';
 				var commentArr = leaveArray[i].Replys;
@@ -329,7 +341,13 @@
 					+i+'"class=" mui-pull-right dynamic-comment-name leaveReply">'+replyHTML +
 					'</span><h4>' + leaveArray[i].unick + '</h4><p>' + leaveArray[i].MsgDate + '</p></div></div><div style="padding:0px 10px 10px 10px"><font>'+leaveArray[i].MsgContent+'</font></div>'+commentHTML;
 			ul.appendChild(li);
-			} 
+			}
+			if(flag==1){
+				mui('#pullrefresh').pullRefresh().endPulldownToRefresh();
+			}else{
+				mui('#pullrefresh').pullRefresh().endPullupToRefresh();
+			}
+			
 			console.log(ul.innerHTML);
 			//点击回复
 			mui('.mui-table-view').on('tap', '.leaveReply', function() {
