--- a/JiaoBaoYun-hb/html/homework/publish-answer.html
+++ b/JiaoBaoYun-hb/html/homework/publish-answer.html
@@ -79,7 +79,7 @@
 					requestSubjectList();
 				} else {
 					//循环遍历老师数组，将群和老师身份的拼接
-					requestUploadFile();
+					requestClassTeacherInfo();
 				}
 				var pictures = document.getElementById('pictures');
 				/**
@@ -207,7 +207,7 @@
 			}
 
 			//循环遍历老师数组，将群和老师身份的拼接
-			function requestUploadFile() {
+			function requestClassTeacherInfo() {
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				for(var i in teacherArray) {
@@ -264,7 +264,7 @@
 			//				};
 
 			//11.上传文件；逻辑：如果是图片类型，同时生成缩略图
-			function requestUploadFile(comData) {
+			function requestUploadFileTeacher(comData) {
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
 				//11.上传文件；逻辑：如果是图片类型，同时生成缩略图
@@ -283,8 +283,38 @@
 					}
 				});
 			}
+			
+			//所需参数
+			//				var comData = {
+			//					userId: personalUTID, //学生ID
+			//					fileType: '1', //文件类型，1：图片；2：音频；3：视频；
+			//					filename: '', //文件名，带后缀；
+			//					fileStream: '', //base64格式文件流；
+			//					displayOrder: '' //图片顺序；
+			//				};
 
-			//14.发布答案,只能上传图片；
+			//5.	上传文件；逻辑：如果是图片类型，同时生成缩略图，学生
+			function requestUploadFileStudent(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//5.	上传文件；逻辑：如果是图片类型，同时生成缩略图
+				postDataPro_UploadFileStu(comData, wd, function(data) {
+					wd.close();
+					console.log('5.postDataPro_UploadFileStu:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						//						“FileId”：1，       //文件id
+						//						“FileName”：”xxx.png”,       //文件名
+						//						“FileType”：1,       //文件类型
+						//						“Url”：“xxx/xxx.png”       //文件url
+						//						“ThumbUrl”：”xxxxxxxx/xxx.png”，    //缩略图url
+						//						“DisplayOrder”：1                //显示顺序
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
+
+			//14.发布答案,只能上传图片；老师
 			function requestPublishAnswer(comData) {
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
@@ -300,7 +330,7 @@
 				});
 			}
 
-			//6.	提交答案结果
+			//6.	提交答案结果，学生
 			function requestSubmitAnswer(comData) {
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
@@ -316,7 +346,7 @@
 				});
 			}
 
-			//8.修改答案结果；
+			//8.修改答案结果；学生
 			function requestModifyAnswer(comData) {
 				// 等待的对话框
 				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
