--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -12,13 +12,40 @@
 
 	<body>
 		<header class="mui-bar mui-bar-nav">
-		    <a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
-		    <h1 class="mui-title">作业详情</h1>
-		    <a class="mui-pull-right">全部作业</a>
+			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
+			<h1 class="mui-title">作业详情</h1>
+			<a class="mui-pull-right">全部作业</a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			mui.plusReady(function() {
+				//2.	获取教师发布作业详情，不包括学生提交的答案；
+				//所需参数
+				var comData = {
+					studentId: '', //学生Id
+					classId: '', //班级群Id；
+					homeworkId: '' //作业id；
+				};
+				requestHomeworkDetail(comData);
+
+			});
+
+			//2.	获取教师发布作业详情，不包括学生提交的答案；
+			function requestHomeworkDetail(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//2.	获取教师发布作业详情，不包括学生提交的答案；
+				postDataPro_GetHomework(comData, wd, function(data) {
+					wd.close();
+					console.log('2.postDataPro_GetHomework:' + JSON.stringify(data.RspData));
+					if(data.RspCode == 0) {
+
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
 		</script>
 	</body>
 
