--- a/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
+++ b/JiaoBaoYun-hb/html/homework/workdetailTea-temSub.html
@@ -12,7 +12,86 @@
 	<body>
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript">
-			mui.init()
+			mui.init();
+			mui.plusReady(function() {
+
+				//4.	根据教师Id和班级Id获取学生某个日期上传的答案列表；
+				//所需参数
+				var comData = {
+					teacherId: personalUTID, //教师Id
+					classId: classID, //班级群Id；
+					date: '' //查看的日期，不带时间；
+				};
+				requestAnswerList(comData);
+
+			});
+
+			//个人id
+			var personalUTID = window.myStorage.getItem(window.storageKeyName.PERSONALINFO).utid;
+			//答案列表数组
+			var answerListArray = [];
+			//群id
+			var classID;
+
+			//4.	根据教师Id和班级Id获取学生某个日期上传的答案列表；
+			function requestAnswerList(comData) {
+				// 等待的对话框
+				var wd = plus.nativeUI.showWaiting(storageKeyName.WAITING);
+				//11.上传文件；逻辑：如果是图片类型，同时生成缩略图
+				postDataPro_GetAnswerResultList(comData, wd, function(data) {
+					wd.close();
+					console.log('4.postDataPro_GetAnswerResultList:RspCode:' + data.RspCode + ',RspData:' + JSON.stringify(data.RspData) + ',RspTxt:' + data.RspTxt);
+					if(data.RspCode == 0) {
+						//给数组赋值
+						answerListArray = data.RspData;
+						//16.通过群ID获取群对象资料
+						//所需参数
+						var comData = {
+							vtp: '0', //0普通资料获取(vvl1传要获取的身份),1邀请关联资料(主老师用,vvl1传邀请的身份)
+							top: '-1', //选择条数,-1为全部
+							vvl: classID, //群ID,查询的值
+							vvl1: '-1' //类型,0家长,1管理员,2老师,3学生,-1全部
+						};
+						//16.通过群ID获取群对象资料
+						postDataPro_PostGUInf(comData, wd, function(data1) {
+							wd.close();
+							console.log('16.postDataPro_PostGUInf:RspCode:' + data1.RspCode + ',RspData:' + JSON.stringify(data1.RspData) + ',RspTxt:' + data1.RspTxt);
+							if(data1.RspCode == 0) {
+								//循环数组，将对应的资料id，塞入对应值
+								for (var m in data1.RspData) {
+									var tempModel0 = data1.RspData[m];
+									for (var n in answerListArray) {
+										var tempModel1 = answerListArray[n];
+										var QuestionResultStr = '';
+										//遍历里面的答案结果列表，进行数据拼接
+										for (var a in tempModel1.QuestionResults) {
+											var tempResultModel = tempModel1.QuestionResults[a];
+											if (tempResultModel.IsRight) {
+												QuestionResultStr = QuestionResultStr + tempResultModel.QuestionNo + '.' + '正确，';
+											} else{
+												QuestionResultStr = QuestionResultStr + tempResultModel.QuestionNo + '.' + '错误，';
+											}
+										}
+										//赋值答案字符串
+										tempModel1.QuestionResultStr = QuestionResultStr;
+										//判断id是否一致
+										if (tempModel1.StudentId == tempModel0.stuid) {
+											//合并
+											tempModel1 = $.extend(tempModel1, tempModel0);
+										}
+									}
+								}
+							}
+							console.log('最终的数据为:'+JSON.stringify(answerListArray));
+							//刷新界面
+							
+						});
+
+					} else {
+						mui.toast(data.RspTxt);
+					}
+				});
+			}
 		</script>
 	</body>
 
