0003983: 连续申请时显示出错

--- a/JiaoBaoYun-hb/html/mine/apply-record.html
+++ b/JiaoBaoYun-hb/html/mine/apply-record.html
@@ -42,6 +42,7 @@
 				})
 				getListData();
 				window.addEventListener('applied',function(){
+					events.clearChild(document.getElementById('list-container'));
 					getListData();
 				})
 			})
