1、下拉刷新显示未读与我相关条数 2、去除发布个人动态中 发布内容前后的空格 3、去掉首页列表上面的白条 4、条件判断 是重新加载一面还是重新加载数据

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -62,6 +62,7 @@
 			//发布按钮
 			events.addTap('publish', function() {
 				var textView = document.getElementById('input-content');
+				textView.value =  Trim(textView.value);
 				console.log('textView.value===' + textView.value)
 				if(!textView.value || textView.value == '') {
 					mui.toast('请输入内容');
@@ -87,6 +88,11 @@
 				
 			})
 		})
+		//去除前后空格
+	 function Trim(str)
+     { 
+             return str.replace(/(^\s*)|(\s*$)/g, ""); 
+     }
 	</script>
 
 </html>
