--- a/JiaoBaoYun-hb/html/quan/tab-zone.html
+++ b/JiaoBaoYun-hb/html/quan/tab-zone.html
@@ -62,6 +62,7 @@
 			.spliter {
 				color: #bbb;
 				margin-right: -15px;
+				margin-left: 5px;
 			}
 			
 			.dynamic-personal-image {
@@ -83,7 +84,7 @@
 	</head>
 
 	<body>
-		<div class="mui-content">
+		<div class="mui-content" style="margin-top: -14px;">
 
 			<!--第一个列表-->
 			<ul id="top-list" class="mui-table-view ">
