--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -347,16 +347,19 @@
 						console.log("文件系统中的目录对象:" + succesCB.root.fullPath);
 						var pathList = succesCB.root.fullPath.split('/');
 						var path2 = '';
+						console.log("pathList:" + JSON.stringify(pathList));
 						mui.each(pathList, function(index, item) {
-							console.log("pathList"+item);
-							if(index = pathList.length - 3) {
-								path2 = path2 + '/';
-								return false;
+							console.log("pathList:item:" + item);
+							if(item != '') {
+								if(index == pathList.length - 3) {
+									path2 = path2 + '/';
+									return false;
+								}
+								path2 = path2 + '/' + item;
+								console.log("path2:" + path2);
 							}
-							path2 = path2 + '/' + item;
-							console.log("path2"+path2);
 						});
-						console.log("path2"+path2);
+						console.log("path2" + path2);
 						initElement(path2);
 					}, function(errorCB) {
 						//请求失败的的回调
