--- a/JiaoBaoYun-hb/html/cloud/storage_upload.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_upload.html
@@ -327,15 +327,9 @@
 					//  PRIVATE_DOC: 应用私有文档目录常量
 					//  PUBLIC_DOCUMENTS: 程序公用文档目录常量
 					//  PUBLIC_DOWNLOADS: 程序公用下载目录常量
-//					var path = plus.io.convertLocalFileSystemURL(url);
-//					var newurl = plus.io.convertAbsoluteFileSystem(url);
-//					console.log("initIOS: " + path + '|' + newurl);
-					//					addTop(path, '手机'); //顶部
-					//					addbot(path); //底部
-					//					folderList.push(path);
-					//					showFolderId = path;
-					//					document.getElementById("folder_"+path).style.display = 'inline';
-					//					resolveLocalFileSystemURL(path);
+					//					var path = plus.io.convertLocalFileSystemURL(url);
+					//					var newurl = plus.io.convertAbsoluteFileSystem(url);
+					//					console.log("initIOS: " + path + '|' + newurl);
 					plus.io.requestFileSystem(url, function(succesCB) {
 						//请求成功的回调
 						//succesCB:FileSystem:请求到的文件系统对象
@@ -347,24 +341,10 @@
 						console.log("文件系统中的目录对象:" + succesCB.root.fullPath);
 						getMetadata(succesCB.root); //获取目录的属性
 						directoryReader(url, succesCB.root); //读取对象
-//						var pathList = succesCB.root.fullPath.split('/');
-//						var path2 = '';
-//						console.log("pathList:" + JSON.stringify(pathList));
-//						mui.each(pathList, function(index, item) {
-////							console.log("pathList:item:" + item);
-//							if(item != '') {
-//								if(index == pathList.length - 3) {
-//									path2 = path2 + '/';
-//									return false;
-//								}
-//								path2 = path2 + '/' + item;
-////								console.log("path2:" + path2);
-//							}
-//						});
-//						console.log("path2:" + path2);
-//						var newurl = plus.io.convertLocalFileSystemURL(path2);
-//						console.log("newurl:" + newurl);
-						initElement(succesCB.root.fullPath);
+						var LocalURL = succesCB.root.toLocalURL();
+						var URL = succesCB.root.toURL();
+						console.log("root: " + LocalURL + '|' + URL);
+						initElement(LocalURL);
 					}, function(errorCB) {
 						//请求失败的的回调
 						console.log("请求文件系统失败: " + JSON.stringify(errorCB));
@@ -395,7 +375,7 @@
 						directoryReader(URL, succesCB); //读取对象
 					}, function(errorCB) {
 						//请求失败的的回调
-						mui.toast('请求文件系统失败');
+						mui.toast('请求文件系统失败' + JSON.stringify(errorCB));
 						console.log("请求文件系统失败: " + JSON.stringify(errorCB));
 					});
 				}
@@ -421,7 +401,7 @@
 						console.log("获取目录或文件的属性成功");
 						console.log("getMetadata:" + JSON.stringify(succesCB));
 					}, function(errorCB) {
-						//console.log("获取目录或文件的属性失败: " + JSON.stringify(errorCB));
+						console.log("获取目录或文件的属性失败: " + JSON.stringify(errorCB));
 					});
 				}
 
@@ -460,6 +440,7 @@
 						//---滑动end---
 
 					}, function(errorCB) {
+						mui.toast("获取当前目录中的所有文件和子目录失败: " + JSON.stringify(errorCB));
 						console.log("获取当前目录中的所有文件和子目录失败: " + JSON.stringify(errorCB));
 					});
 				}
