--- a/JiaoBaoYun-hb/html/homework/workdetail-stu.html
+++ b/JiaoBaoYun-hb/html/homework/workdetail-stu.html
@@ -17,7 +17,9 @@
 			<a class="mui-pull-right">全部作业</a>
 		</header>
 		<script src="../../js/mui.min.js"></script>
-		<script src="../../js/storageKeyName.jse" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/storageKeyName.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicHomeworkProtocol.js" type="text/javascript" charset="utf-8"></script>
+		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script type="text/javascript">
 			mui.init();
 			mui.plusReady(function() {
